@@ -1,42 +1,37 @@
 package com.niam.usermanagement.security;
 
 import com.niam.usermanagement.exception.handlers.CustomAccessDeniedHandler;
-import com.niam.usermanagement.security.filter.CaptchaValidationFilter;
-import com.niam.usermanagement.security.filter.IpRateLimitFilter;
-import com.niam.usermanagement.security.filter.JwtAuthenticationFilter;
-import com.niam.usermanagement.security.filter.UsernameRateLimitFilter;
+import com.niam.usermanagement.exception.handlers.Http401UnauthorizedEntryPoint;
+import com.niam.usermanagement.security.filter.*;
 import com.niam.usermanagement.service.captcha.CaptchaProvider;
 import com.niam.usermanagement.service.captcha.CaptchaRegistry;
-import com.niam.usermanagement.security.filter.CachedBodyFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
-
-import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
 @EnableMethodSecurity
 public class SecurityConfiguration {
-    private static final Long MAX_AGE = 3600L;
+    private static final long MAX_AGE = 3600L;
     private static final int CORS_FILTER_ORDER = -102;
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
@@ -47,6 +42,7 @@ public class SecurityConfiguration {
     private final IpRateLimitFilter ipRateLimitFilter;
     private final UsernameRateLimitFilter usernameRateLimitFilter;
     private final CachedBodyFilter cachedBodyFilter;
+    private final CaptchaRateLimitFilter captchaRateLimitFilter;
 
     @Value("${app.captcha.enabled:false}")
     private boolean captchaEnabled;
@@ -58,20 +54,17 @@ public class SecurityConfiguration {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
                 .headers(headers -> headers
-                        .contentSecurityPolicy(csp -> csp
-                                .policyDirectives("default-src 'self'; script-src 'self'; object-src 'none'")
+                        .contentSecurityPolicy(csp ->
+                                csp.policyDirectives("default-src 'self'; script-src 'self'; object-src 'none'")
                         )
-                        .frameOptions(HeadersConfigurer.FrameOptionsConfig::disable)
-                        .httpStrictTransportSecurity(hsts -> hsts
-                                .includeSubDomains(true)
-                                .maxAgeInSeconds(31536000))
+                        .frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin)
                 )
                 .exceptionHandling(exception -> exception
                         .authenticationEntryPoint(unauthorizedEntryPoint)
-                        .accessDeniedHandler(accessDeniedHandler))
+                        .accessDeniedHandler(accessDeniedHandler)
+                )
                 .authorizeHttpRequests(request ->
-                        request
-                                .requestMatchers(
+                        request.requestMatchers(
                                         "/api/v1/auth/**",
                                         "/v3/api-docs",
                                         "/v3/api-docs/**",
@@ -80,22 +73,26 @@ public class SecurityConfiguration {
                                         "/swagger-ui.html",
                                         "/error"
                                 ).permitAll()
-                                .anyRequest().authenticated())
-                .sessionManagement(manager -> manager.sessionCreationPolicy(STATELESS))
+                                .anyRequest().authenticated()
+                )
+                .sessionManagement(m -> m.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider);
 
         http.addFilterBefore(cachedBodyFilter, UsernamePasswordAuthenticationFilter.class);
         http.addFilterBefore(ipRateLimitFilter, UsernamePasswordAuthenticationFilter.class);
-        http.addFilterBefore(usernameRateLimitFilter, UsernamePasswordAuthenticationFilter.class);
 
-        // Captcha
+        // validate captcha AFTER captcha rate limit
         if (captchaEnabled) {
+            http.addFilterBefore(captchaRateLimitFilter, UsernamePasswordAuthenticationFilter.class);
             CaptchaProvider provider = captchaRegistry.get(captchaProviderName);
             CaptchaValidationFilter captchaFilter = new CaptchaValidationFilter(provider);
             http.addFilterBefore(captchaFilter, UsernamePasswordAuthenticationFilter.class);
         }
 
-        // JWT
+        // username-based rate limit
+        http.addFilterBefore(usernameRateLimitFilter, UsernamePasswordAuthenticationFilter.class);
+
+        // JWT must be last
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -107,18 +104,14 @@ public class SecurityConfiguration {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
         config.addAllowedOriginPattern("*");
-        config.setAllowedHeaders(Arrays.asList(
-                HttpHeaders.AUTHORIZATION,
-                HttpHeaders.CONTENT_TYPE,
-                HttpHeaders.ACCEPT));
-        config.setAllowedMethods(Arrays.asList(
-                HttpMethod.GET.name(),
-                HttpMethod.POST.name(),
-                HttpMethod.PUT.name(),
-                HttpMethod.DELETE.name()));
+        config.setAllowedHeaders(List.of(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE, HttpHeaders.ACCEPT));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
         config.setMaxAge(MAX_AGE);
         source.registerCorsConfiguration("/**", config);
-        FilterRegistrationBean<org.springframework.web.filter.CorsFilter> bean = new FilterRegistrationBean<>(new CorsFilter(source));
+
+        FilterRegistrationBean<org.springframework.web.filter.CorsFilter> bean =
+                new FilterRegistrationBean<>(new CorsFilter(source));
+
         bean.setOrder(CORS_FILTER_ORDER);
         return bean;
     }
