@@ -1,5 +1,6 @@
 package com.niam.usermanagement.web.controller;
 
+import com.niam.usermanagement.model.entities.Permission;
 import com.niam.usermanagement.model.payload.response.PermissionDto;
 import com.niam.usermanagement.service.PermissionCacheService;
 import com.niam.usermanagement.service.UserQueryService;
@@ -11,8 +12,10 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * Returns permissions for the current authenticated user.
+ */
 @RestController
 @RequestMapping("/api/v1/auth")
 @RequiredArgsConstructor
@@ -23,10 +26,10 @@ public class PermissionController {
     @GetMapping("/permissions")
     public ResponseEntity<List<PermissionDto>> getPermissions(Authentication authentication) {
         Long userId = userQueryService.getCurrentUserId(authentication);
-        List<com.niam.usermanagement.model.entities.Permission> perms = permissionCacheService.getPermissionsForUser(userId);
+        List<Permission> perms = permissionCacheService.getPermissionsForUser(userId);
         List<PermissionDto> dto = perms.stream()
                 .map(p -> new PermissionDto(p.getCode(), p.getDescription()))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dto);
     }
 }
